--- a/index.html
+++ b/index.html
@@ -4,8 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zen Weather</title>
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
+<style>
+    
+</style>
 <body>
+    <div class="container">
+        <div class="weather_card">
+            <div class="weather_card_wrapper">
+                <div class="div1">
+                    <div class="cloud_date">
+                        <p class="cloud_type">Overcast clouds</p>
+                        <p>Thu, Jul 24</p>
+                    </div>
+                    <div class="temp_hour">
+                        <div class="temp">25°</div>
+                        <div class="cloud_icon">
+                            <img width="50px" src="./assets/img/cloud-rain.svg" alt="">
+                        </div>
+                        <div>
+                            <p class="hour">13 : 30</p>
+                            <p><b>Humidity</b> : 23%</p>
+                            <p><b>Accurlevel</b>  : 30°</p>
 
+                        </div>
+                    </div>
+                    <div class="location">Lubumbashi, Congo RD</div>
+                </div>
+                <div class="hourly_daily_weather">
+                    <div class="pagination">
+                        <a href="" class="pagination_link">Hourly</a>
+                        <a href="" class="pagination_link">Daily</a>
+                    </div>
+                    <div class="weather_items_container">
+                        <div class="weather_item">
+                            <p class="day_or_time">Today</p>
+                            <span class="cloud_icon">
+                                <img src="./assets/img/cloud-rain.svg" alt="">
+                            </span>
+                            <p class="temperature">25°C</p>
+                        </div>
+                        <div class="weather_item">
+                            <p class="day_or_time">Today</p>
+                            <span class="cloud_icon">
+                                <img src="./assets/img/cloud-rain.svg" alt="">
+                            </span>
+                            <p class="temperature">25°C</p>
+                        </div>
+                        <div class="weather_item">
+                            <p class="day_or_time">Today</p>
+                            <span class="cloud_icon">
+                                <img src="./assets/img/cloud-rain.svg" alt="">
+                            </span>
+                            <p class="temperature">25°C</p>
+                        </div>
+                        <div class="weather_item">
+                            <p class="day_or_time">Today</p>
+                            <span class="cloud_icon">
+                                <img src="./assets/img/cloud-rain.svg" alt="">
+                            </span>
+                            <p class="temperature">25°C</p>
+                        </div>
+                        <div class="weather_item">
+                            <p class="day_or_time">Today</p>
+                            <span class="cloud_icon">
+                                <img src="./assets/img/cloud-rain.svg" alt="">
+                            </span>
+                            <p class="temperature">25°C</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
