change css into scss

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="weather_card">
             <div class="weather_card_wrapper">
-                <div class="div1">
+                <div class="now_weather-infos">
                     <div class="cloud_date">
                         <p class="cloud_type">Overcast clouds</p>
                         <p>Thu, Jul 24</p>
@@ -32,7 +32,7 @@
                     </div>
                     <div class="location">Lubumbashi, Congo RD</div>
                 </div>
-                <div class="hourly_daily_weather">
+                <div class="hourly_daily_weather_infos">
                     <div class="pagination">
                         <a href="" class="pagination_link">Hourly</a>
                         <a href="" class="pagination_link">Daily</a>
