Handle light and dark mode styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,10 +33,7 @@
                     <div class="location">Lubumbashi, Congo RD</div>
                 </div>
                 <div class="hourly_daily_weather_infos">
-                    <div class="pagination">
-                        <a href="" class="pagination_link">Hourly</a>
-                        <a href="" class="pagination_link">Daily</a>
-                    </div>
+                    
                     <div class="weather_items_container">
                         <div class="weather_item">
                             <p class="day_or_time">Today</p>
