Add repository and ignore node_modules

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                     <div class="temp_hour">
                         <div class="temp">--</div>
                         <div class="cloud_icon">
-                            <img width="50px" src="./assets/img/cloud-rain.svg" alt="">
+                            <img width="80px" src="./assets/img/cloud-rain.svg" alt="">
                         </div>
-                        <div>
+                        <div class="weather_details">
                             <p class="hour">-- : --</p>
-                            <p><b>Humidity</b> : --</p>
-                            <p><b>Wind</b>  : --</p>
+                            <p class="humidity"><b>Humidity</b> : <span class="value">--</span></p>
+                            <p class="wind"><b>Wind</b>  : <span class="value">--</span></p>
                         </div>
                     </div>
                     <div class="location">Lubumbashi, Congo RD</div>
