clean code : add comments

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                     </div>
                 </div>
             </div>
+
+            <div class="menu">
+                
+            </div>
         </div>
     </div>
     <script src="./dist/main.js"></script>
