Add menu button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
     <div class="container">
         <div class="weather_card">
+            <div class="menu_btn_container">
+                <label for="check">
+                    <input type="checkbox" id="check"/> 
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </label>
+            </div>
             <div class="weather_card_wrapper">
                 <div id="current_weather" class="current_weather_infos">
                     <div class="condition_date">
