index.html & styles update: menu opening management with sass

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="weather_card">
             <div class="menu_btn_container">
-                <label for="check">
-                    <input type="checkbox" id="check"/> 
+                <label for="menu_check">
+                    <input type="checkbox" id="menu_check"/> 
                     <span></span>
                     <span></span>
                     <span></span>
