Edit index.html : Add change location button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
                             <p class="wind"><b>Wind</b>  : <span class="value">--</span></p>
                         </div>
                     </div>
-                    <div class="location">Lubumbashi, Congo RD</div>
+                    <div class="location">
+                        <span class="value">-------------</span>
+                        <span class="change_location">
+                            <button>Edit</button>
+                        </span>
+                    </div>
                 </div>
                 <div class="future_weather_infos">
                     
