--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <div class="menu">
                 <div class="menu_options_container">
-                    <div class="menu_option">
+                    <div class="menu_option change_location_btn">
                         <span class="option_icon">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!-- Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --><path d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"/></svg>
                         </span>
@@ -80,7 +80,6 @@
                                 <span id="knob"></span>
                                 <input type="checkbox" id="dark_toggle">
                             </div>
-                            
                         </div>
                     </div>
                     <div class="menu_option">
@@ -92,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="change_location_modal">
+            <div class="change_location_modal" id="change_location_modal">
                 <div class="wrapper">
                     <div class="">
                         <form id="change_location_form">
