--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
                     <p>Please check your internet connection and reload.</p>
                 </span>
             </div>
+
+            <div class="loader_container">
+                <div class="loader"></div>
+            </div>
+
         </div>
     </div>
     <script src="./dist/main.js"></script>
