--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                 </span>
             </div>
 
-            <div class="loader_container">
-                <div class="loader"></div>
+            <div class="loader_container" id="loader">
+                <div class="spinner"></div>
             </div>
 
         </div>
